path to a new test image

--- a/config/settings.config
+++ b/config/settings.config
@@ -24,10 +24,11 @@ seedValue=919171192
 
 ########### Settings relevant to import image mode ###########
 # image full path
-imagePath=C:\Workdir\Develop\visibility-based-marching\images\compare.png
+imagePath=D:\OneDrive - KU Leuven\TRO\visibility-based-marching\images\lab_image_edited.png
+#C:\Workdir\Develop\visibility-based-marching\images\compare.png
 
 ########### Solver settings ###########
-initialFrontline={5, 5}
+initialFrontline={378, 505}
 visibilityThreshold=0.5
 # compute vstar path
 vstar=1
@@ -44,8 +45,8 @@ astar=1
 # compute distance functions
 distanceFunction=1
 # Target
-target_x=50
-target_y=50
+target_x=184
+target_y=195
 # Solver timer
 timer=1
 
