using compare.png settings

--- a/config/settings.config
+++ b/config/settings.config
@@ -24,11 +24,10 @@ seedValue=919171192
 
 ########### Settings relevant to import image mode ###########
 # image full path
-imagePath=D:\OneDrive - KU Leuven\TRO\visibility-based-marching\images\lab_image_edited.png
-#C:\Workdir\Develop\visibility-based-marching\images\compare.png
+imagePath=D:\OneDrive - KU Leuven\TRO\visibility-based-marching\images\compare.png
 
 ########### Solver settings ###########
-initialFrontline={378, 505}
+initialFrontline={5, 5}
 visibilityThreshold=0.5
 # compute vstar path
 vstar=1
@@ -45,8 +44,8 @@ astar=1
 # compute distance functions
 distanceFunction=1
 # Target
-target_x=184
-target_y=195
+target_x=50
+target_y=50
 # Solver timer
 timer=1
 
