--- a/config/settings.config
+++ b/config/settings.config
@@ -3,39 +3,36 @@ mode=2
 
 ########### Settings relevant to random environment mode ###########
 # Environment dimensions 100 by default
-nrows=1000
 ncols=1000
+nrows=1000
 # Number of obstacles 10 by default
-nb_of_obstacles=15
+nb_of_obstacles=5
 # Obstacle dimensions 10 20 10 20 by default
-minWidth=20
+minWidth=100
 maxWidth=200
-minHeight=20
+minHeight=100
 maxHeight=200
 speedValue=5.0
 # Seed randomness (updates at 1/sec)
 randomSeed=0
 # Can fix seed value instead (only if randomSeed=0)
-seedValue=919171192
-# -1132960916 
-# 101320616
-# -1449500684
-# 194452620
+seedValue=-666865584
+#919171192
 
 ########### Settings relevant to import image mode ###########
 # image full path
 imagePath=D:\OneDrive - KU Leuven\TRO\visibility-based-marching\images\compare.png
 
 ########### Solver settings ###########
-initialFrontline={5, 5}
+initialFrontline={381, 144}
 visibilityThreshold=0.5
 # compute vstar path
 vstar=1
-# Compute the vstar path, 1 = vstar, 0 = continuous dijkstra. Applies also to astar solver.
+# Compute the vstar path, 1 = vstar, 0 uses VBM and stops upon reaching target. Applies also to astar solver as Dijkstra instead of VBM.
 greedy=1
 # compute the visibility-based solver implementation path
 visibilityBasedSolver=1
-# compute MSFM in MATLAB
+# compute MSFM
 msfm=1
 # setting limited to visibilityBasedSolver
 expandInObstacles=0
@@ -44,8 +41,8 @@ astar=1
 # compute distance functions
 distanceFunction=1
 # Target
-target_x=50
-target_y=50
+target_x=198
+target_y=450
 # Solver timer
 timer=1
 
