--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ project(vbs)
 set(CMAKE_CXX_COMPILER C:/Workdir/Programs/msys64/mingw64/bin/g++.exe)
 
 set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -Ofast -finline-functions -fopenmp -march=native -floop-interchange -floop-strip-mine -floop-block -funroll-loops -fassociative-math -frename-registers -ftracer -ftree-vectorize -fomit-frame-pointer -flto -std=c++20 -Wall -Wextra -Wpedantic -Wshadow -Wformat=2 -Wnull-dereference -D_USE_MATH_DEFINES")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -Ofast -flto=auto -std=c++20 -Wall -Wextra -Wpedantic -Wformat=2 -Wnull-dereference -D_USE_MATH_DEFINES -Wno-sign-compare")
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
 
