--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -33,23 +33,10 @@
       "args": [
         "-O3",
         "-Ofast",
-        "-finline-functions",
-        "-ffast-math",
-        "-march=native",
-        "-fopenmp",
-        "-floop-interchange",
-        "-floop-strip-mine",
-        "-floop-block",
-        "-funroll-loops",
-        "-fassociative-math",
-        "-frename-registers",
-        "-ftracer",
-        "-ftree-vectorize",
-        "-fomit-frame-pointer",
-        "-flto",
         "-std=c++20",
         "-o",
         "${workspaceFolder}\\vbs.exe",
+        "-flto=auto",
         "${workspaceFolder}\\src\\*.cpp",
         "-lsfml-graphics",
         "-I",
@@ -57,10 +44,10 @@
         "-Wall",
         "-Wextra",
         "-Wpedantic",
-        "-Wshadow",
         "-Wformat=2",
         "-Wnull-dereference",
         "-D_USE_MATH_DEFINES",
+        "-Wno-sign-compare",
       ],
       "options": {
         "cwd": "${fileDirname}"
