--- a/config/settings.config
+++ b/config/settings.config
@@ -21,7 +21,7 @@ seedValue=-666865584
 
 ########### Settings relevant to import image mode ###########
 # image full path
-imagePath=D:\OneDrive - KU Leuven\TRO\visibility-based-marching\images\compare.png
+imagePath=C:\Workdir\Develop\Projects\visibility-based-marching\images\lab_image_edited.png
 
 ########### Solver settings ###########
 initialFrontline={381, 144}
