plot VBS + contour lines using SFML

--- a/config/settings.config
+++ b/config/settings.config
@@ -1,12 +1,12 @@
 # Mode (1 = random environment mode (default), 2 = loaded image mode)
-mode=2
+mode=1
 
 ########### Settings relevant to random environment mode ###########
 # Environment dimensions 100 by default
 ncols=1000
 nrows=1000
 # Number of obstacles 10 by default
-nb_of_obstacles=5
+nb_of_obstacles=15
 # Obstacle dimensions 10 20 10 20 by default
 minWidth=100
 maxWidth=200
@@ -14,17 +14,17 @@ minHeight=100
 maxHeight=200
 speedValue=5.0
 # Seed randomness (updates at 1/sec)
-randomSeed=0
+randomSeed=1
 # Can fix seed value instead (only if randomSeed=0)
 seedValue=-666865584
 #919171192
 
 ########### Settings relevant to import image mode ###########
 # image full path
-imagePath=C:\Workdir\Develop\Projects\visibility-based-marching\images\lab_image_edited.png
+imagePath=/path/to/image.png
 
 ########### Solver settings ###########
-initialFrontline={381, 144}
+initialFrontline={50, 50}
 visibilityThreshold=0.5
 # compute vstar path
 vstar=1
@@ -41,8 +41,8 @@ astar=1
 # compute distance functions
 distanceFunction=1
 # Target
-target_x=198
-target_y=450
+target_x=950
+target_y=950
 # Solver timer
 timer=1
 
@@ -60,3 +60,8 @@ saveDistanceFunction=1
 
 # Turn to disable displaying loaded settings
 silent=0
+
+# save visibility based solver image with contour lines
+saveVisibilityBasedSolverImage=1
+number_of_contour_lines=100
+ballRadius=10 # for aStar and vStar start and end positions
