add SFMl distance function image generation

--- a/config/settings.config
+++ b/config/settings.config
@@ -65,3 +65,6 @@ silent=0
 saveVisibilityBasedSolverImage=1
 number_of_contour_lines=100
 ballRadius=10 # for aStar and vStar start and end positions
+
+# save distance function image
+saveDistanceFunctionImage = 1
