--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,10 @@ cmake_minimum_required(VERSION 3.10)
 
 project(vbm)
 
+# set the C++ standard
 set(CMAKE_CXX_STANDARD 20)
+# set the C++ compiler version
+set(CMAKE_CXX_COMPILER "g++-11")
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
