--- a/config/settings.config
+++ b/config/settings.config
@@ -67,4 +67,4 @@ number_of_contour_lines=50
 ballRadius=10 # for aStar and vStar start and end positions
 
 # save distance function image
-saveDistanceFunctionImage = 1
+saveDistanceFunctionImage=1
