--- a/config/settings.config
+++ b/config/settings.config
@@ -61,6 +61,9 @@ saveDistanceFunction=1
 # Turn to disable displaying loaded settings
 silent=0
 
+# Turn on/off contour lines. In large maps, they can cause visual clutter
+contourLines=0
+
 # save visibility based solver image with contour lines
 saveVisibilityBasedSolverImage=1
 number_of_contour_lines=50
